--- a/Layout with orientations/Base.lproj/Main.storyboard
+++ b/Layout with orientations/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Layout_with_orientations" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cvl-bY-SRV">
+                                <rect key="frame" x="24" y="629" width="30" height="30"/>
+                                <state key="normal" title="LL"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S1H-iU-bAy">
+                                <rect key="frame" x="24" y="20" width="163.5" height="30"/>
+                                <state key="normal" title="UL"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bCE-1R-I7k">
+                                <rect key="frame" x="187.5" y="20" width="163.5" height="30"/>
+                                <state key="normal" title="UR"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rSQ-PE-oPq">
+                                <rect key="frame" x="24" y="323" width="30" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Right" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlP-V1-YwZ">
+                                <rect key="frame" x="317" y="323" width="40" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pjj-gM-uCZ">
+                                <rect key="frame" x="321" y="629" width="30" height="30"/>
+                                <state key="normal" title="LR"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="bCE-1R-I7k" firstAttribute="width" secondItem="S1H-iU-bAy" secondAttribute="width" id="8gW-xN-mYM"/>
+                            <constraint firstItem="Cvl-bY-SRV" firstAttribute="baseline" secondItem="Pjj-gM-uCZ" secondAttribute="baseline" id="Fxc-0c-ptO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bCE-1R-I7k" secondAttribute="trailing" constant="8" id="KFr-MQ-46A"/>
+                            <constraint firstItem="S1H-iU-bAy" firstAttribute="baseline" secondItem="bCE-1R-I7k" secondAttribute="baseline" id="KaM-hO-H40"/>
+                            <constraint firstItem="S1H-iU-bAy" firstAttribute="leading" secondItem="rSQ-PE-oPq" secondAttribute="leading" id="Mfy-kb-Yrj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hlP-V1-YwZ" secondAttribute="trailing" constant="2" id="Q7v-dX-Vnb"/>
+                            <constraint firstItem="rSQ-PE-oPq" firstAttribute="baseline" secondItem="hlP-V1-YwZ" secondAttribute="baseline" id="QVO-KZ-be5"/>
+                            <constraint firstItem="bCE-1R-I7k" firstAttribute="leading" secondItem="S1H-iU-bAy" secondAttribute="trailing" id="Xcc-cs-liS"/>
+                            <constraint firstItem="S1H-iU-bAy" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Yx8-gn-A23"/>
+                            <constraint firstItem="bCE-1R-I7k" firstAttribute="trailing" secondItem="Pjj-gM-uCZ" secondAttribute="trailing" id="cNz-zi-bRh"/>
+                            <constraint firstItem="rSQ-PE-oPq" firstAttribute="leading" secondItem="Cvl-bY-SRV" secondAttribute="leading" id="ePL-KD-Kql"/>
+                            <constraint firstItem="bCE-1R-I7k" firstAttribute="leading" secondItem="S1H-iU-bAy" secondAttribute="trailing" id="iKK-n9-uKw"/>
+                            <constraint firstItem="rSQ-PE-oPq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mUG-qb-4Di"/>
+                            <constraint firstItem="S1H-iU-bAy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="oGj-Sr-1C7"/>
+                            <constraint firstItem="bCE-1R-I7k" firstAttribute="leading" secondItem="S1H-iU-bAy" secondAttribute="trailing" id="uaK-uQ-coI"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Cvl-bY-SRV" secondAttribute="bottom" constant="8" symbolic="YES" id="wKM-wO-JIr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
